--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     ]
   },
   "dependencies": {
-    "@blueprintjs/core": "^4.20.0",
-    "@blueprintjs/datetime": "^4.4.35",
+    "@blueprintjs/core": "^5.9.1",
+    "@blueprintjs/datetime2": "^2.3.1",
     "@fortawesome/fontawesome-pro": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/pro-light-svg-icons": "^6.2.1",
