--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "router5-plugin-browser": "~7.0.2",
     "semver": "~7.5.4",
     "store2": "~2.13.1",
-    "ua-parser-js": "~1.0.2"
+    "ua-parser-js": "~1.0.2",
+    "uuid": "^9.0.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
