Set `composite:true` within tsconfig.json
+ Allow app-level tsconfig files to add hoist-react as a composite build reference, allowing the apps to apply their own (presumably stricter) tsconfig settings to their own source while instructing tsc to respect hoist-react's tsconfig settings when evaluating the hoist-react source.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "composite": true,
     "experimentalDecorators": true,
     "target": "ES2022",
     "module": "ES2022",
@@ -16,5 +17,6 @@
     },
     "lib": ["dom", "es2022"]
   },
+  "include": ["./**/*", "package.json"],
   "exclude": ["node_modules"]
 }
