Hotfix v57.0.1 - update tsconfig.json with `composite: true`
+ Support app-level TS compiler options that differ from those specified by hoist-react itself.
+ Backported to v57 as requested by client.

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 !/.idea/scopes/
 !/.idea/copyright/
 *.iml
+.vscode
 
 # Build / Libs
 build/
 node_modules/
+tsconfig.tsbuildinfo
 
 # Logs
 *.log
@@ -16,4 +18,3 @@ node_modules/
 .DS_Store?
 ehthumbs.db
 Thumbs.db
-
