--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
+    "@azure/msal-browser": "^3.13.0",
     "@blueprintjs/core": "^5.10.1",
     "@blueprintjs/datetime2": "^2.3.3",
     "@fortawesome/fontawesome-pro": "^6.2.1",
