--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "ua-parser-js": "~1.0.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0"
   },
   "devDependencies": {
     "@ag-grid-community/client-side-row-model": "31.x",
@@ -98,8 +98,8 @@
     "lint-staged": "15.x",
     "postcss": "8.x",
     "prettier": "3.x",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
     "stylelint": "16.x",
     "stylelint-config-standard-scss": "13.x",
     "type-fest": "4.x",
