--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@ag-grid-community/client-side-row-model": "31.x",
     "@ag-grid-community/core": "31.x",
     "@ag-grid-community/react": "31.x",
-    "@xh/hoist-dev-utils": "8.x",
+    "@xh/hoist-dev-utils": "^9.0.0-SNAPSHOT",
     "csstype": "3.x",
     "eslint": "8.x",
     "eslint-config-prettier": "9.x",
