--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "golden-layout": "~1.5.9",
     "http-status-codes": "~2.3.0",
     "inter-ui": "~3.19.3",
+    "jwt-decode": "~4.0.0",
     "lodash": "~4.17.21",
     "lodash-inflection": "~1.5.0",
     "mobx": "~6.9.1",
