--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "~2.1.3",
     "@azure/msal-browser": "~3.14.0",
-    "@blueprintjs/core": "^5.10.2",
-    "@blueprintjs/datetime2": "^2.3.3",
+    "@blueprintjs/core": "^5.10.3",
+    "@blueprintjs/datetime": "^5.3.5",
+    "@blueprintjs/datetime2": "^2.3.5",
     "@fortawesome/fontawesome-pro": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/pro-light-svg-icons": "^6.2.1",
