Enhance `markdown` comp to support GitHub Flavored Markdown (GFM) (#3585)

--- a/package.json
+++ b/package.json
@@ -70,14 +70,15 @@
     "react-dates": "~21.8.0",
     "react-dropzone": "~10.2.2",
     "react-grid-layout": "1.4.3",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "~9.0.1",
     "react-onsenui": "~1.13.2",
     "react-popper": "~2.3.0",
     "react-select": "~4.3.1",
     "react-transition-group": "~4.4.2",
     "react-windowed-select": "~3.1.2",
     "regenerator-runtime": "~0.13.11",
-    "remark-breaks": "^3.0.3",
+    "remark-breaks": "~4.0.0",
+    "remark-gfm": "~4.0.0",
     "resize-observer-polyfill": "~1.5.1",
     "router5": "~7.0.2",
     "router5-plugin-browser": "~7.0.2",
