--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "router5-plugin-browser": "~7.0.2",
     "semver": "~7.6.0",
     "store2": "~2.13.1",
-    "ua-parser-js": "~1.0.2"
+    "ua-parser-js": "~1.0.2",
+    "uuid": "~10.0.0"
   },
   "peerDependencies": {
     "react": "~18.2.0",
