--- a/package.json
+++ b/package.json
@@ -20,14 +20,8 @@
     "./static/polyfills.js"
   ],
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint",
-      "prettier --write"
-    ],
-    "*.s?(a|c)ss": [
-      "stylelint",
-      "prettier --write"
-    ]
+    "*.{js,jsx,ts,tsx}": ["prettier --write", "eslint"],
+    "*.s?(a|c)ss": ["prettier --write", "stylelint"]
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "~2.1.3",
