--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "jwt-decode": "~4.0.0",
     "lodash": "~4.17.21",
     "lodash-inflection": "~1.5.0",
-    "mime-types": "~2.1.35",
+    "mime": "^4.0.4",
     "mobx": "~6.13.2",
     "mobx-react-lite": "~4.0.7",
     "moment": "~2.30.1",
