--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
     "@ag-grid-community/client-side-row-model": "31.x",
     "@ag-grid-community/core": "31.x",
     "@ag-grid-community/react": "31.x",
+    "@types/react": "18.x",
+    "@types/react-dom": "18.x",
     "@xh/hoist-dev-utils": "9.x",
     "csstype": "3.x",
     "eslint": "8.x",
@@ -112,6 +114,8 @@
     "typescript": "~5.1.6"
   },
   "resolutions": {
-    "core-js": "^3.0"
+    "core-js": "3.x",
+    "@types/react": "18.x",
+    "@types/react-dom": "18.x"
   }
 }
