--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@ag-grid-community/react": "31.x",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
-    "@xh/hoist-dev-utils": "^11.0.0-SNAPSHOT",
+    "@xh/hoist-dev-utils": "10.x",
     "csstype": "3.x",
     "eslint": "8.x",
     "eslint-config-prettier": "9.x",
