hoist-dev-utils to v11.x & eslint to v9.x (#3996)
* Upgrade to HDU 11.0.0-SNAPSHOT to get upgrade eslint-config
+ replace .eslintrc with v9 compatible eslint.config.js

* "@xh/hoist-dev-utils": "11.0.0-SNAPSHOT.1747333512169" for latest eslint-config with eslint v9.x

* backslash @ in comments to satisfy estlint tsdoc.

* use backticks instead of backslash on decorator names in comment.

* Move from snapshot version of HDU to v11.x

* update yarn lock

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "lint": "yarn lint:all",
-    "lint:all": "yarn lint:ts && yarn lint:js && yarn lint:styles",
-    "lint:js": "eslint --ext .js,.jsx .",
-    "lint:ts": "eslint --ext .ts,.tsx .",
+    "lint:all": "yarn lint:code && yarn lint:styles",
+    "lint:code": "eslint .",
     "lint:styles": "stylelint \"**/*.s?(a|c)ss\"",
     "prepare": "husky"
   },
@@ -97,10 +96,10 @@
     "@ag-grid-community/react": "31.x",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
-    "@xh/hoist-dev-utils": "10.x",
+    "@xh/hoist-dev-utils": "11.x",
     "csstype": "3.x",
-    "eslint": "8.x",
-    "eslint-config-prettier": "9.x",
+    "eslint": "9.x",
+    "eslint-config-prettier": "10.x",
     "eslint-plugin-tsdoc": "0.x",
     "husky": "9.x",
     "lint-staged": "15.x",
