Use repo.xh.io for FontAwesome
- Re-activated our XH nexus repo proxy to authenticated FA repo, looking to avoid pulling packages from FA's own npm as we have a cap on bandwidth

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-@fortawesome:registry=https://npm.fontawesome.com/
-//npm.fontawesome.com/:_authToken=ABE1E3DA-85E5-4338-B645-BB04E504A908
+@fortawesome:registry=https://repo.xh.io/repository/npm-fontawesome/
