--- a/package.json
+++ b/package.json
@@ -91,9 +91,9 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@ag-grid-community/client-side-row-model": "31.x",
-    "@ag-grid-community/core": "31.x",
-    "@ag-grid-community/react": "31.x",
+    "@ag-grid-community/client-side-row-model": "32.3.8",
+    "@ag-grid-community/core": "32.3.8",
+    "@ag-grid-community/react": "32.3.8",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
     "@xh/hoist-dev-utils": "11.x",
