--- a/package.json
+++ b/package.json
@@ -91,9 +91,8 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@ag-grid-community/client-side-row-model": "32.3.8",
-    "@ag-grid-community/core": "32.3.8",
-    "@ag-grid-community/react": "32.3.8",
+    "ag-grid-community": "33.3.2",
+    "ag-grid-react": "33.3.2",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
     "@xh/hoist-dev-utils": "11.x",
