--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "ag-grid-community": "33.3.2",
-    "ag-grid-react": "33.3.2",
+    "ag-grid-community": "34.x",
+    "ag-grid-react": "34.x",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
     "@xh/hoist-dev-utils": "11.x",
