--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@ag-grid-community/react": "31.x",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
+    "@types/react-grid-layout": "1.3.5",
     "@xh/hoist-dev-utils": "11.x",
     "csstype": "3.x",
     "eslint": "9.x",
