--- a/package.json
+++ b/package.json
@@ -91,9 +91,8 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@ag-grid-community/client-side-row-model": "31.x",
-    "@ag-grid-community/core": "31.x",
-    "@ag-grid-community/react": "31.x",
+    "ag-grid-community": "34.x",
+    "ag-grid-react": "34.x",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
     "@types/react-grid-layout": "1.3.5",
