--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xh/hoist",
-  "version": "76.0.0-SNAPSHOT",
+  "version": "76.0.0",
   "description": "Hoist add-on for building and deploying React Applications.",
   "repository": "github:xh/hoist-react",
   "homepage": "https://xh.io",
@@ -91,12 +91,12 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "ag-grid-community": "34.x",
-    "ag-grid-react": "34.x",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
     "@types/react-grid-layout": "1.3.5",
     "@xh/hoist-dev-utils": "11.x",
+    "ag-grid-community": "34.x",
+    "ag-grid-react": "34.x",
     "csstype": "3.x",
     "eslint": "9.x",
     "eslint-config-prettier": "10.x",
