--- a/package.json
+++ b/package.json
@@ -45,7 +45,23 @@
     "@seznam/compose-react-refs": "~1.0.5",
     "classnames": "~2.5.1",
     "clipboard-copy": "~4.0.1",
-    "codemirror": "~5.65.0",
+    "codemirror": "~6.0.2",
+    "@codemirror/view": "6.38.6",
+    "@uiw/codemirror-themes-all": "~4.25.2",
+    "@codemirror/commands": "6.9.0",
+    "@codemirror/language": "6.11.3",
+    "@codemirror/lint": "6.9.0",
+    "@codemirror/search": "6.5.11",
+    "@codemirror/autocomplete": "6.19.0",
+
+    "@codemirror/lang-javascript": "6.2.4",
+    "@codemirror/lang-json": "6.0.2",
+    "@codemirror/lang-html": "~6.4.11",
+    "@codemirror/lang-python": "~6.2.1",
+    "@codemirror/lang-css": "~6.3.1",
+    "@codemirror/lang-sql": "~6.10.0",
+    "@codemirror/lang-java": "~6.0.2",
+    "ajv": "~8.17.1",
     "core-js": "3.x",
     "debounce-promise": "~3.1.0",
     "dompurify": "~3.2.3",
@@ -115,7 +131,8 @@
   "resolutions": {
     "core-js": "3.x",
     "@types/react": "18.x",
-    "@types/react-dom": "18.x"
+    "@types/react-dom": "18.x",
+    "@codemirror/view": "6.38.6"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
