Limit code mirror themes to github light/dark

--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
     "@blueprintjs/core": "^5.10.5",
     "@blueprintjs/datetime": "^5.3.7",
     "@blueprintjs/datetime2": "^2.3.7",
+    "@codemirror/commands": "6.9.0",
+    "@codemirror/language": "6.11.3",
+    "@codemirror/language-data": "6.5.2",
+    "@codemirror/lint": "6.9.0",
+    "@codemirror/search": "6.5.11",
+    "@codemirror/view": "6.38.6",
     "@fortawesome/fontawesome-pro": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/pro-light-svg-icons": "^6.6.0",
@@ -43,17 +49,11 @@
     "@onsenui/fastclick": "~1.1.1",
     "@popperjs/core": "~2.11.0",
     "@seznam/compose-react-refs": "~1.0.5",
+    "@uiw/codemirror-theme-github": "^4.25.4",
+    "ajv": "~8.17.1",
     "classnames": "~2.5.1",
     "clipboard-copy": "~4.0.1",
     "codemirror": "~6.0.2",
-    "@codemirror/view": "6.38.6",
-    "@uiw/codemirror-themes-all": "~4.25.2",
-    "@codemirror/commands": "6.9.0",
-    "@codemirror/language": "6.11.3",
-    "@codemirror/lint": "6.9.0",
-    "@codemirror/search": "6.5.11",
-    "@codemirror/language-data": "6.5.2",
-    "ajv": "~8.17.1",
     "core-js": "3.x",
     "debounce-promise": "~3.1.0",
     "dompurify": "~3.3.0",
