--- a/package.json
+++ b/package.json
@@ -35,7 +35,12 @@
     "@blueprintjs/datetime2": "^2.3.7",
     "@codemirror/commands": "6.9.0",
     "@codemirror/language": "6.11.3",
-    "@codemirror/language-data": "6.5.2",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-python": "^6.2.0",
+    "@codemirror/lang-html": "^6.2.0",
+    "@codemirror/lang-css": "^6.2.0",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-sql": "^6.2.0",
     "@codemirror/lint": "6.9.0",
     "@codemirror/search": "6.5.11",
     "@codemirror/view": "6.38.6",
