--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "@codemirror/commands": "6.9.0",
     "@codemirror/language": "6.11.3",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lint": "6.9.0",
     "@codemirror/search": "6.5.11",
     "@codemirror/view": "6.38.6",
