--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "@blueprintjs/core": "^5.10.5",
     "@blueprintjs/datetime": "^5.3.7",
     "@blueprintjs/datetime2": "^2.3.7",
-    "@codemirror/commands": "6.9.0",
+    "@codemirror/view": "6.39.4",
+    "@codemirror/commands": "6.10.0",
     "@codemirror/language": "6.11.3",
-    "@codemirror/lang-javascript": "^6.2.4",
-    "@codemirror/lang-json": "^6.0.2",
-    "@codemirror/lang-html": "^6.4.11",
-    "@codemirror/lang-sql": "^6.10.0",
-    "@codemirror/lang-css": "^6.3.1",
-    "@codemirror/lint": "6.9.0",
+    "@codemirror/lang-javascript": "6.2.4",
+    "@codemirror/lang-html": "6.4.11",
+    "@codemirror/lang-css": "6.3.1",
+    "@codemirror/lang-json": "6.0.2",
+    "@codemirror/lang-sql": "6.10.0",
+    "@codemirror/lint": "6.9.2",
     "@codemirror/search": "6.5.11",
-    "@codemirror/view": "6.38.6",
     "@fortawesome/fontawesome-pro": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/pro-light-svg-icons": "^6.6.0",
@@ -56,7 +56,6 @@
     "ajv": "~8.17.1",
     "classnames": "~2.5.1",
     "clipboard-copy": "~4.0.1",
-    "codemirror": "~6.0.2",
     "core-js": "3.x",
     "debounce-promise": "~3.1.0",
     "dompurify": "~3.3.0",
