remove custom theme impl

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@onsenui/fastclick": "~1.1.1",
     "@popperjs/core": "~2.11.0",
     "@seznam/compose-react-refs": "~1.0.5",
+    "@uiw/codemirror-theme-github": "^4.25.4",
     "ajv": "~8.17.1",
     "classnames": "~2.5.1",
     "clipboard-copy": "~4.0.1",
