--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xh/hoist",
-  "version": "79.0.0",
+  "version": "80.0.0-SNAPSHOT",
   "description": "Hoist add-on for building and deploying React Applications.",
   "repository": "github:xh/hoist-react",
   "homepage": "https://xh.io",
