--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@azure/msal-browser": "~4.26.2",
     "@blueprintjs/core": "^6.3.2",
     "@blueprintjs/datetime": "^6.0.6",
-    "@codemirror/commands": "6.10.0",
-    "@codemirror/language-data": "6.5.2",
-    "@codemirror/lint": "6.9.2",
-    "@codemirror/search": "6.5.11",
+    "@codemirror/commands": "~6.10.1",
+    "@codemirror/language": "~6.12.1",
+    "@codemirror/language-data": "~6.5.2",
+    "@codemirror/lint": "~6.9.2",
+    "@codemirror/state": "~6.5.3",
+    "@codemirror/view": "~6.39.9",
     "@fortawesome/fontawesome-pro": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/pro-light-svg-icons": "^6.6.0",
@@ -46,7 +48,7 @@
     "@onsenui/fastclick": "~1.1.1",
     "@popperjs/core": "~2.11.0",
     "@seznam/compose-react-refs": "~1.0.5",
-    "@uiw/codemirror-theme-github": "^4.25.4",
+    "@uiw/codemirror-theme-github": "~4.25.4",
     "ajv": "~8.17.1",
     "classnames": "~2.5.1",
     "clipboard-copy": "~4.0.1",
