Add resolution to pin `jquery@3.x`
* jQuery is a transitive dependency of the `golden-layout` library and is specified by that library very loosely as `*`, causing a break if upgraded to jQuery's new 4.x release.
* Applications will need to add their own resolution to ensure they stay on the last 3.x version.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "golden-layout": "~1.5.9",
     "http-status-codes": "~2.3.0",
     "inter-ui": "~4.1.1",
+    "jquery": "3.x",
     "jwt-decode": "~4.0.0",
     "lodash": "~4.17.21",
     "lodash-inflection": "~1.5.0",
@@ -111,9 +112,10 @@
     "typescript": "~5.9.2"
   },
   "resolutions": {
-    "core-js": "3.x",
     "@types/react": "18.x",
-    "@types/react-dom": "18.x"
+    "@types/react-dom": "18.x",
+    "core-js": "3.x",
+    "jquery": "3.x"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
