--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ tsconfig.tsbuildinfo
 # Logs
 *.log
 
+# Local Claude Code instructions
+CLAUDE.local.md
+
 # OS generated files
 .DS_Store
 .DS_Store?
