--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@xh/hoist",
   "version": "82.0.0-SNAPSHOT",
   "description": "Hoist add-on for building and deploying React Applications.",
-  "repository": "github:xh/hoist-react",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xh/hoist-react.git"
+  },
   "homepage": "https://xh.io",
   "bugs": "https://github.com/xh/hoist-react/issues",
   "author": "Extremely Heavy Industries, Inc.",
