--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xh/hoist",
-  "version": "81.0.2",
+  "version": "82.0.0-SNAPSHOT",
   "description": "Hoist add-on for building and deploying React Applications.",
   "repository": {
     "type": "git",
